--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 			  
 			<transform translation="0 0 0" rotation = "1 0 0 0.6" scale = "0.8 0.8 0.8">
 
-		<Background backUrl = "day.jpg"></Background>
 
 
 	<Collision DEF = "Collision" enabled = "true">		  
@@ -213,7 +212,7 @@
             <Appearance>
              <ImageTexture url ="help.jpg" repeatS="true" repeatT="true"></ImageTexture>
             </Appearance>
-			<IndexedTriangleSet index="0 1 2"solid="false">
+			<IndexedTriangleSet index= '0 1 2' solid='false'>
 				<Coordinate point="1 2.5 2.7, 3 2.5 2.7, 3 1.5 2.7"></Coordinate>
 			</IndexedTriangleSet>
           </Shape>
