--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 	
 	<!--TEXT-->
 	<transform rotation="0 0 0 0" translation="0 6 0">
-	 <Anchor url="https://самара.квестгид.рф/images/quest/100xNxupload_64524ef673f33ec537c0783b9a75bb36.jpg.pagespeed.ic.kvj7REfGlm.jpg" parameter="target='_self'"> 
+	 <Anchor url="https://самара.квестгид.рф/images/quest/100xNxupload_64524ef673f33ec537c0783b9a75bb36.jpg.pagespeed.ic.kvj7REfGlm.jpg" parameter="target='_self'"></Anchor> 
      <Shape DEF="Text">
 		<Text maxExtent="6" length="7" string="Хочешь посмотреть мой домик внутри?"></Text>
 	   <Appearance>
@@ -294,7 +294,7 @@
 			creaseAngle="0" normalPerVertex="true" solid="false"
 			coordIndex = "0 1 3 2 0 -1 4 5 7 6 4 -1 0 4 6 2 0 -1 1 5 7 3 1 -1 2 6 7 3 2 -1 0 4 5 1 0 -1"
 			colorIndex = "0 1 3 2 0 -1 4 5 7 6 4 -1 0 4 6 2 0 -1 1 5 7 3 1 -1 2 6 7 3 2 -1 0 4 5 1 0 -1"
-			colorPerVertex = "true">
+			>
          <Color color="0 0 0, 0 0 1, 0 1 0, 0 1 1, 1 0 0, 1 0 1, 1 1 0, 1 1 1"></Color>
            <Coordinate point="0 0 0, 0 0 10, 0 10 0, 0 10 10, 10 0 0, 10 0 10, 10 10 0, 10 10 10"></Coordinate>
        </IndexedFaceSet>
@@ -308,7 +308,7 @@
          <ImageTexture url="1.jpg"></ImageTexture>
        </Appearance>
        <IndexedTriangleStripSet index="0 1 4 3 2 1 0 2 4" solid="false">
-         <Coordinate point="0 0 0, 0 0 10, 0 10 0, 0 10 10, 10 5 5></Coordinate>
+         <Coordinate point="0 0 0, 0 0 10, 0 10 0, 0 10 10, 10 5 5"></Coordinate>
          <Color color="0 0 0, 0 0 1, 0 1 0, 0 1 1, 1 0 0, 1 0 1, 1 1 0, 1 1 1"></Color>
        </IndexedTriangleStripSet> 
      </Shape>
