--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<x3d>
 			<scene>
-                <pointlight location = '0 0 0' radius = 500></pointlight>
+                <pointlight location = '0 0 0' radius = '500'></pointlight>
                 <background  backUrl = "sky.png" ></background>
                 <viewpoint position = '0 0 20000'></viewpoint>
                 
@@ -46,7 +46,7 @@
                         <appearance>
                             <Material emissiveColor = '1 0 0'></Material> 
                         </appearance>
-                        <torus outerRadius = 1000 innerRadius = 1></torus>
+                        <torus outerRadius = '1000' innerRadius = '1'></torus>
                     </shape>
                 </transform>                
                 </Group>
@@ -65,7 +65,7 @@
                         <appearance>
                             <Material emissiveColor = '0 0 1'></Material> 
                         </appearance>
-                        <torus outerRadius = 1282 innerRadius = 1></torus>
+                        <torus outerRadius = '1282' innerRadius = '1'></torus>
                     </shape>
                 </transform>
                 </Group>
@@ -84,7 +84,7 @@
                         <appearance>
                             <Material emissiveColor = '0 1 0'></Material> 
                         </appearance>
-                        <torus outerRadius = 1592 innerRadius = 1></torus>
+                        <torus outerRadius = '1592' innerRadius = '1'></torus>
                     </shape>
                 </transform>
                 </Group> 
@@ -103,7 +103,7 @@
                         <appearance>
                             <Material emissiveColor = '1 0 0'></Material> 
                         </appearance>
-                        <torus outerRadius = 2290 innerRadius = 1></torus>
+                        <torus outerRadius = '2290' innerRadius = '1'></torus>
                     </shape>
                 </transform>                
                 </Group>
@@ -122,7 +122,7 @@
                         <appearance>
                             <Material emissiveColor = '0 0 1'></Material> 
                         </appearance>
-                        <torus outerRadius = 3432 innerRadius = 1></torus>
+                        <torus outerRadius = '3432' innerRadius = '1'></torus>
                     </shape>
                 </transform>                
                 </Group>
@@ -141,7 +141,7 @@
                         <appearance>
                             <Material emissiveColor = '1 0 0'></Material> 
                         </appearance>
-                        <torus outerRadius = 5935 innerRadius = 1></torus>
+                        <torus outerRadius = '5935' innerRadius = '1'></torus>
                     </shape>
                 </transform>
                 </Group>
@@ -160,7 +160,7 @@
                         <appearance>
                             <Material emissiveColor = '0 0 1'></Material> 
                         </appearance>
-                        <torus outerRadius = 8291 innerRadius = 1></torus>
+                        <torus outerRadius = '8291' innerRadius = '1'></torus>
                     </shape>
                 </transform>
                 </Group>
@@ -179,7 +179,7 @@
                         <appearance>
                             <Material emissiveColor = '0 1 0'></Material> 
                         </appearance>
-                        <torus outerRadius = 10291 innerRadius = 1></torus>
+                        <torus outerRadius = '10291' innerRadius = '1'></torus>
                     </shape>
                 </transform>
                 </Group>
