--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <transform DEF = 'sat_anim1'>
                     <shape>
                         <appearance>
-                            <ImageTexture  url="Sat.png"></ImageTexture>
+                            <ImageTexture  url="Sat.jpg"></ImageTexture>
                         </appearance>
                         <sphere radius = '100'></sphere>
                     </shape>
