--- a/index.html
+++ b/index.html
@@ -318,9 +318,17 @@
                         <sphere radius = '100'></sphere>
                     </shape>
                     </transform>
+                    <transform rotation = '1 0 1 .57'>
+                    <shape>
+                        <appearance>
+                            <ImageTexture  url="ring1.png"></ImageTexture>
+                        </appearance>
+                          <cylinder radius = '200'></cylinder>
+                    </shape>
+                    </transform>
                 </transform>
                     
-                <viewpoint id = 'Saturn' position = '5935 0 400'></viewpoint>
+                <viewpoint id = 'Saturn' position = '5940  2587.69952 1979.96630' orientation="-0.96606 -0.25830 -0.00096 1.26208" ></viewpoint>
                     
                 <transform translation="0 0 0" rotation = "1 0 0 1.57">
                     <shape>
