--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
 
 
@@ -87,48 +88,48 @@
 
 
 			<div id="windowsun" class = "window">
-                <p><img src="sun1.jpg" class = "align-right medium">
+                <p><img src="textures/sun1.jpg" class = "align-right medium">
                 <b><i>Солнце</i></b> — одна из звёзд нашей Галактики (Млечный Путь) и единственная звезда Солнечной системы. Вокруг Солнца обращаются другие объекты этой системы: планеты и их спутники, карликовые планеты и их спутники, астероиды, метеороиды, кометы и космическая пыль. </p>	
 			</div>
             <div onclick="show('none', 'merc')" id="wrapmerc" class = "wrap"></div>
             <div id="windowmerc" class = "window">
-                <p><img src="mer%D1%811.jpg" class = "align-right medium">
+                <p><img src="textures/mer%D1%811.jpg" class = "align-right medium">
                 <b><i>Мeркурий</i></b> — ближайшая к Солнцу планета Солнечной системы, наименьшая из планет земной группы. Названа в честь древнеримского бога торговли — быстрого Меркурия, поскольку она движется по небу быстрее других планет. Период обращения вокруг Солнца занимает всего 87,97 дней, самый короткий из всех планет Солнечной системы. </p>	
 			</div>
         <div onclick="show('none', 'ven')" id="wrapven" class = "wrap"></div>
             <div id="windowven" class = "window">
-                <p><img src="ven1.jpg" class = "align-right medium">
+                <p><img src="textures/ven1.jpg" class = "align-right medium">
                 <b><i>Венера</i></b> — вторая по удалённости от Солнца планета Солнечной системы, наряду с Меркурием, Землёй и Марсом принадлежащая к семейству планет земной группы. Названа в честь древнеримской богини любви Венеры. По ряду характеристик — например, по массе и размерам — Венера считается «сестрой» Земли. Венерианский год составляет 224,7 земных суток. Она имеет самый длинный период вращения вокруг своей оси (около 243 земных суток, в среднем 243,0212 ± 0,00006 сут) среди всех планет Солнечной системы и вращается в направлении, противоположном направлению вращения большинства планет. </p>	
 			</div>
             <div onclick="show('none', 'earth')" id="wrapearth" class = "wrap"></div>
             <div id="windowearth" class = "window">
-                <p><img src="earth1.jpg" class = "align-right medium">
+                <p><img src="textures/earth1.jpg" class = "align-right medium">
                 <b><i>Земля</i></b> — третья по удалённости от Солнца планета Солнечной системы. Самая плотная, пятая по диаметру и массе среди всех планет и крупнейшая среди планет земной группы, в которую входят также Меркурий, Венера и Марс. Единственное известное человеку на данный момент тело Солнечной системы в частности и Вселенной вообще, населённое живыми организмами. </p>	
 			</div>
        <div onclick="show('none', 'mars')" id="wrapmars" class = "wrap"></div>
             <div id="windowmars" class = "window">
-                <p><img src="mars1.jpg" class = "align-right medium">
+                <p><img src="textures/mars1.jpg" class = "align-right medium">
                 <b><i>Марс</i></b> — четвёртая по удалённости от Солнца  планета земной группы с разреженной атмосферой (давление у поверхности в 160 раз меньше земного). Особенностями поверхностного рельефа Марса можно считать ударные кратеры наподобие лунных, а также вулканы, долины, пустыни и полярные ледниковые шапки наподобие земных.</p>	
 			</div>
        <div onclick="show('none', 'jup')" id="wrapjup" class = "wrap"></div>
             <div id="windowjup" class = "window">
-                <p><img src="Jup1.jpg" class = "align-right medium">
+                <p><img src="textures/Jup1.jpg" class = "align-right medium">
                 <b><i>Юпитер</i></b> —  крупнейшая планета Солнечной системы, пятая по удалённости от Солнца. Наряду с Сатурном, Ураном и Нептуном, Юпитер классифицируется как газовый гигант. 
 Планета была известна людям с глубокой древности, что нашло своё отражение в мифологии и религиозных верованиях различных культур: месопотамской, вавилонской, греческой и других. Современное название Юпитера происходит от имени древнеримского верховного бога-громовержца</p>	
 			</div>
        <div onclick="show('none', 'sat')" id="wrapsat" class = "wrap"></div>
             <div id="windowsat" class = "window">
-                <p><img src="sat1.jpg" class = "align-right medium">
+                <p><img src="textures/sat1.jpg" class = "align-right medium">
                 <b><i>Сатурн</i></b> —  шестая планета от Солнца и вторая по размерам планета в Солнечной системе после Юпитера. Сатурн, а также Юпитер, Уран и Нептун, классифицируются как планеты-гиганты. Сатурн назван в честь римского бога земледелия. Сатурн обладает заметной системой колец, состоящей главным образом из частичек льда, меньшего количества тяжёлых элементов и пыли.</p>	
 			</div>
        <div onclick="show('none', 'ur')" id="wrapur" class = "wrap"></div>
             <div id="windowur" class = "window">
-                <p><img src="Ur1.jpg" class = "align-right medium">
+                <p><img src="textures/Ur1.jpg" class = "align-right medium">
                 <b><i>Уран</i></b> — планета Солнечной системы, седьмая по удалённости от Солнца, третья по диаметру и четвёртая по массе. Была открыта в 1781 году английским астрономом Уильямом Гершелем и названа в честь греческого бога неба Урана.Уран стал первой планетой, обнаруженной в Новое время и при помощи телескопа. Его открыл Уильям Гершель 13 марта 1781 года, тем самым впервые со времён античности расширив границы Солнечной системы в глазах человека. Несмотря на то, что порой Уран различим невооружённым глазом, более ранние наблюдатели принимали его за тусклую звезду. </p>	
 			</div>
        <div onclick="show('none', 'nep')" id="wrapnep" class = "wrap"></div>
             <div id="windownep" class = "window">
-                <p><img src="nep1.jpg" class = "align-right medium">
+                <p><img src="textures/nep1.jpg" class = "align-right medium">
                 <b><i>Нептун</i></b> — восьмая и самая дальняя от Земли планета Солнечной системы. По диаметру находится на четвёртом месте, а по массе — на третьем. Масса Нептуна в 17,2 раза, а диаметр экватора в 3,9 раза больше земных. Планета была названа в честь римского бога морей.</p>	
 			</div>
         <div onclick="show('none', 'sup')" id="wrapsup" class = "wrap"></div>
@@ -223,7 +224,7 @@
         <X3D  width='1800px' height='900px'>
 			<scene>
               <pointlight location = '1000 1000 1000' radius = '500'></pointlight>
-                <background  backUrl = "sky.png" ></background>
+                <background  backUrl = "textures/sky.png" ></background>
                 <Viewpoint id = 'general' position="266.54208 25830.79523 1379.18914" orientation="-0.99994 0.00011 -0.01077 1.51757" 
 	 centerOfRotation="0.00000 0.00000 0.00000" description=""></Viewpoint>
                 <Viewpoint id = 'sun' position="-2812.66395 209.91418 -982.29634" orientation="-0.01286 -0.99896 -0.04374 1.90860" 
@@ -234,7 +235,7 @@
                 <transform DEF = "sun_anim">
                     <shape onclick="show('block', 'sun')">
                         <appearance>
-                            <ImageTexture  url="sun.jpg"></ImageTexture>
+                            <ImageTexture  url="textures/sun.jpg"></ImageTexture>
                         </appearance>
                         <sphere radius = '500'></sphere>
                     </shape>
@@ -248,7 +249,7 @@
                 <transform DEF = 'merc_anim1'>
                     <shape onclick="show('block', 'merc')">
                         <appearance>
-                            <ImageTexture  url="merc.jpg"></ImageTexture>
+                            <ImageTexture  url="textures/merc.jpg"></ImageTexture>
                         </appearance>
                         <sphere radius = '17.5'></sphere>
                     </shape>
@@ -275,7 +276,7 @@
                 <transform DEF = 'ven_anim1'>
                     <shape onclick="show('block', 'ven')">
                         <appearance>
-                            <ImageTexture  url="venus.jpg"></ImageTexture>
+                            <ImageTexture  url="textures/venus.jpg"></ImageTexture>
                         </appearance>
                         <sphere radius = '43.5'></sphere>
                     </shape>
@@ -301,7 +302,7 @@
                 <transform  DEF = 'earth_anim1'>
                     <shape onclick="show('block', 'earth')">
                         <appearance>
-                            <ImageTexture  url="earth.jpg"></ImageTexture>
+                            <ImageTexture  url="textures/earth.jpg"></ImageTexture>
                         </appearance>
                         <sphere radius = '45.8'></sphere>
                     </shape>
@@ -327,7 +328,7 @@
                     <transform DEF = 'mars_anim1'>
                     <shape onclick="show('block', 'mars')">
                         <appearance>
-                            <ImageTexture  url="mars.jpg"></ImageTexture>
+                            <ImageTexture  url="textures/mars.jpg"></ImageTexture>
                         </appearance>
                         <sphere radius = '24.4'></sphere>
                     </shape>
@@ -353,7 +354,7 @@
                 <transform DEF = 'jup_anim1'>
                     <shape onclick="show('block', 'jup')">
                         <appearance>
-                            <ImageTexture  url="Jup.jpg"></ImageTexture>
+                            <ImageTexture  url="textures/Jup.jpg"></ImageTexture>
                         </appearance>
                         <sphere radius = '150'></sphere>
                     </shape>
@@ -379,7 +380,7 @@
                     <transform DEF = 'sat_anim1'>
                     <shape onclick="show('block', 'sat')">
                         <appearance>
-                            <ImageTexture  url="Sat.jpg"></ImageTexture>
+                            <ImageTexture  url="textures/Sat.jpg"></ImageTexture>
                         </appearance>
                         <sphere radius = '100'></sphere>
                     </shape>
@@ -387,7 +388,7 @@
                     <transform rotation = '1 0 1 .57'>
                     <shape>
                         <appearance>
-                            <ImageTexture  url="ring1.png"></ImageTexture>
+                            <ImageTexture  url="textures/ring1.png"></ImageTexture>
                         </appearance>
                           <cylinder radius = '200' height = '.5'></cylinder>
                     </shape>
@@ -413,7 +414,7 @@
                     <transform DEF = 'ur_anim1'>
                     <shape onclick="show('block', 'ur')">
                         <appearance>
-                            <ImageTexture  url="Ur.jpg"></ImageTexture>
+                            <ImageTexture  url="textures/Ur.jpg"></ImageTexture>
                         </appearance>
                         <sphere radius = '70'></sphere>
                     </shape>
@@ -439,7 +440,7 @@
                     <transform DEF = 'nep_anim1'>
                     <shape onclick="show('block', 'nep')">
                         <appearance>
-                            <ImageTexture  url="nep.jpg"></ImageTexture>
+                            <ImageTexture  url="textures/nep.jpg"></ImageTexture>
                         </appearance>
                         <sphere radius = '60'></sphere>
                     </shape>
@@ -618,7 +619,7 @@
                 
 			</scene>
 
-		</x3d>
+		</X3D>
 
 	</body>
 
